# jsk_demos

./: .gitignore  .rosinstall  .travis.before_script.sh  .travis.rosinstall  .travis.rosinstall.default  .travis.rosinstall.indigo  .travis.rosinstall.noetic  .travis.yml  .travis_before_script_hydro.bash  README.md  elevator_move_base_pr2.rosinstall
ar_sensor_view/: CMakeLists.txt  README.md  ar_sensor_view.launch  calc-polygon-to-coords.l  jaxon_ar_sample.rviz  package.xml  sample.launch
database_talker/: .gitignore  CMakeLists.txt  README.md  aibo.rosinstall  package.xml  requirements.txt  rosinstall  setup.py
database_talker/launch/: aibo_example.launch  demo.launch  make_aibo_diary.launch
database_talker/scripts/: hoge.py  make_aibo_diary.py  make_diary.py  make_lovot_diary.py
detect_cans_in_fridge_201202/: CHANGELOG.rst  CMakeLists.txt  README.md  catkin.cmake  conf.py  detect_cans_in_fridge.rviz  detect_cans_in_fridge.vcg  detect_cans_in_fridge_201202.rosinstall  index.rst  mainpage.dox  manifest.xml  object_models1.yaml  package.xml  rosdoc.yaml
detect_cans_in_fridge_201202/apps/: apps.installed
detect_cans_in_fridge_201202/config/: desktop.rviz  object_histograms.yaml  object_models_new.yaml  reference_histograms.yaml  reference_histograms_tabletop.yaml  self_filter.yaml  surface_tablet.rviz
detect_cans_in_fridge_201202/euslisp/: async-join-based-parallel-smach-main.l  base-go-to-fridge-init-pose.l  base-go-to-fridge.l  color_histogram_creater.l  detect_cans.l  find-object.l  fridge-demo-smach-main.l  fridge-marker.l  fridge-marker2.l  grasp-can-init.l  grasp-can-posing.l  look-around-pr2.l  look-at-fridge.l  main-old.l  main-pddl.l  main.l  main2.l  match-hist.l  move-forward-larm.l  move-to-and-open-fridge-door.l  move-to-can-spot.l  open-fridge-door-initial-pose.l  pddl-action-hrp2.l  pddl-action-pr2.l  pddl-action.l  pick-tabletop-object.l  place-object.l  planned-state-machine.l  planner-demo-main.l  solve-fridge-demo.l  swipe-fridge-door.l  test-go-to-fridge.l  wander-pr2.l  white_balance_converter.l
detect_cans_in_fridge_201202/launch/: color_histogram.launch  color_histogram_tabletop.launch  detect_cans.launch  detect_cans.vcg  detect_cans.xml  detect_cans_eng2.launch  detect_cans_eng8.launch  detect_fridge.launch  detect_fridge.xml  detect_fridge_eng2.launch  detect_fridge_eng8.launch  fridge_demo_async.launch  gazebo_startup.launch  grasp_object_extract.launch  mask_rcnn.launch  perception.launch  planner.launch  rviz.launch  startup.launch  startup.xml  startup_hrp2.launch  startup_pr2.launch  test_perception.launch  white_balance.launch
detect_cans_in_fridge_201202/scripts/: color_histogram_detector.py  surface_tablet.desktop  surface_tablet.desktop~  surface_tablet.sh  surface_tablet.sh~
diabolo_pr2_201806/: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
diabolo_pr2_201806/apps/: app.installed
diabolo_pr2_201806/config/: idle-diabolo.rviz
diabolo_pr2_201806/euslisp/: demo-idle.l  idle.l  juggle.l  utils.l
diabolo_pr2_201806/launch/: demo_idle_diabolo.launch  idle_diabolo.launch  relay_kinect.launch
diabolo_pr2_201806/scripts/: diabolo_system.py  lpf.py  mymodel.h5  plot_fitting_state.sh  plot_simulate_state.sh  state_input_logger.py  state_realtime_plotter.py
diabolo_pr2_201806/src/: calc_idle_diabolo_state.cpp
elevator_move_base_pr2/: CHANGELOG.rst  CMakeLists.txt  README.md  catkin.cmake  conf.py  index.rst  mainpage.dox  manifest.xml  package.xml  rosdoc.yaml
elevator_move_base_pr2/apps/: apps.installed
elevator_move_base_pr2/config/: door_bboxes.yaml  door_button_segmentation_3d.rviz
elevator_move_base_pr2/launch/: check_elevator_open.xml  door_button_segmentation_3d.launch  elevator_move_base_eng2.launch  elevator_move_base_eng8.launch  elevator_move_base_modules.xml  elevator_panels_detection_eng2.launch  elevator_panels_detection_eng8.launch  extract_door_cloud.launch  extract_eng2_forum_door_point_cloud.launch  fcn_door_button_segmentation.launch  find_human_in_mirror.launch  save_images_from_pr2_head_cameras.launch  save_images_from_pr2_kinect.launch  ssd.launch  template-eng2.yaml  template-eng8.yaml  templatematch.launch
elevator_move_base_pr2/node_scripts/: bounding_box_centroid_3d.py  concat_pose_and_class.py  find_human_in_mirror.py  match_template.py  save_image_by_btn.py
elevator_move_base_pr2/sample/: fetch-sandwich.l  fetch_sandwich.launch  go-to-spot.l  look-at-human.l  milktea-box.launch  pose_detector_auto_gen_sample.l  rimokon-pose.launch
elevator_move_base_pr2/scripts/: button_state_marker.l  install_trained_model.py
elevator_move_base_pr2/src/: add-msg-pgsql.l  check-elevator-open.l  color_point_detector.cpp  database-interface.l  elevator-buttons.l  elevator-move-base-main.l  elevator-move-base.l  eng2-through-door-nav.l  eusmodel_template_gen.sh  eusmodel_template_gen_utils.l  find-elevator-button.l  match_template.py  matchtemplate.py  move-inside-elevator.l  navigation-client-addon.l  (+7 more)
elevator_operation/: CMakeLists.txt  README.md  elevator_operation.rosinstall  package.xml
elevator_spot/: CMakeLists.txt  package.xml
fridge_demo_bt/: CMakeLists.txt  fc.rosinstall  package.xml
interactive_behavior_201409/: CHANGELOG.rst  CMakeLists.txt  README.md  manifest.xml  package.xml  pr2.machine  requirements.txt
jsk_2011_07_pr2_semantic/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  rosdoc.yaml
jsk_2013_04_pr2_610/: CHANGELOG.rst  CMakeLists.txt  README.md  app.app  app.launch  catkin.cmake  detect_laundry.launch  example-for-pfilter.txt  jsk_2013_04_pr2_610.rosinstall  mainpage.dox  manifest.xml  package.xml  startup.launch
jsk_2013_05_pr2_tatu/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
jsk_2014_06_pr2_drcbox/: CHANGELOG.rst  CMakeLists.txt  package.xml
jsk_2016_10_fetch_deliver/: CMakeLists.txt  package.xml
jsk_2017_10_semi/: CHANGELOG.rst  CMakeLists.txt  package.xml
jsk_2018_10_22_stamp/: CMakeLists.txt  jsk_2018_10_22_stamp.machine  package.xml
jsk_2018_10_semi/: CMakeLists.txt  package.xml
(+2532 files in other folders)
