<package>
  <name>elevator_move_base_pr2</name>
  <version>0.0.4</version>
  <description>elevator_move_base_pr2</description>
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <author email="k-okada@jsk.t.u-tokyo.ac.jp">Manabu Saito</author>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/elevator_move_base_pr2</url>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>app_manager</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>image_view</run_depend>
  <run_depend>imagesift</run_depend>
  <run_depend>jsk_data</run_depend>
  <run_depend>jsk_gui_msgs</run_depend>
  <run_depend>jsk_maps</run_depend>
  <run_depend>jsk_pcl_ros</run_depend>
  <run_depend>jsk_pcl_ros_utils</run_depend>
  <run_depend>jsk_perception</run_depend>
  <run_depend>jsk_recognition_utils</run_depend>
  <run_depend>jsk_rqt_plugins</run_depend>
  <run_depend>jsk_rviz_plugins</run_depend>
  <run_depend>jsk_tools</run_depend>
  <run_depend>jsk_topic_tools</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>pr2_machine</run_depend>
  <run_depend>pr2eus</run_depend>
  <run_depend>roseus</run_depend>
  <run_depend>roseus_smach</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>sound_play</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>topic_tools</run_depend>

  <!-- Dependencies needed while testing this package. -->
  <test_depend>image_proc</test_depend>
  <test_depend>rosbag</test_depend>
  <test_depend>rostest</test_depend>

  <export>
    <app_manager app_dir="${prefix}/apps"/>
  </export>

</package>
