<?xml version="1.0"?>
<package>
  <name>elevator_spot</name>
  <version>0.0.0</version>
  <description>Spot uses the elevator at Faculty of engineering No.2 building, the University of Tokyo.</description>

  <author email="obinata@jsk.imi.i.u-tokyo.ac.jp">Yoshiki Obinata</author>
  <maintainer email="obinata@jsk.imi.i.u-tokyo.ac.jp">Yoshiki Obinata</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>spoteus</run_depend>

  <export>
  </export>
</package>
