<?xml version="1.0"?>
<package>
  <name>interactive_behavior_201409</name>
  <version>0.0.4</version>
  <description>The interactive_behavior_201409 package</description>

  <maintainer email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>people_msgs</build_depend>
  <build_depend>pr2eus</build_depend>
  <build_depend>roseus</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>app_manager</run_depend>
  <run_depend>geometry_msgs</run_depend>x
  <run_depend>jsk_hark_msgs</run_depend>
  <run_depend>jsk_topic_tools</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>pddl_planner</run_depend>
  <run_depend>people_msgs</run_depend>
  <run_depend>pr2eus</run_depend>
  <run_depend>respeaker_ros</run_depend>
  <run_depend>roseus</run_depend>
  <run_depend>roseus_smach</run_depend>
  <run_depend>roseus_mongo</run_depend>
  <run_depend>std_msgs</run_depend>

  <run_depend>detect_cans_in_fridge_201202</run_depend>
  <run_depend>elevator_move_base_pr2</run_depend>
  <run_depend>jsk_2017_12_pr2_coe</run_depend>

  <export>
    <app_manager app_dir="${prefix}/apps"/>
  </export>
</package>
