<package>
  <name>jsk_2013_05_pr2_tatu</name>
  <version>0.0.3</version>
  <description>jsk_2013_05_pr2_tatu</description>
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/jsk_2013_05_pr2_tatu</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Tatu</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>pr2eus</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>pr2eus</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>pr2eus</test_depend> -->

</package>
