<?xml version="1.0"?>
<package>
  <name>jsk_2014_06_pr2_drcbox</name>
  <version>0.0.3</version>
  <description>pr2 demo for drcbox</description>

  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">k-okada</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pr2eus</build_depend>

  <run_depend>pr2eus</run_depend>

  <export>

  </export>
</package>
